unpackaged/main/default/objects/Matter_Asset__c/Matter_Asset__c.object-meta.xml
<CustomObject>
    <label>Matter Asset</label>
    <nameField>
        <displayFormat>Asset-{00000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>