unpackaged/main/default/objects/Matter_Asset__c/fields/Amount_of_Escrow_Demand__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Escrow_Demand__c</fullName>
    <label>Amount of Escrow Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>