unpackaged/main/default/objects/Matter_Asset__c/fields/Amount_of_Liens__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Liens__c</fullName>
    <description>Amount of Liens on Property</description>
    <inlineHelpText>Amount of Liens on Property</inlineHelpText>
    <label>Amount of Liens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>