unpackaged/main/default/objects/Matter_Asset__c/fields/Date_Escrow_Demand_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Escrow_Demand_Sent__c</fullName>
    <label>Date Escrow Demand Sent</label>
    <type>Date</type>
</CustomField>