unpackaged/main/default/objects/Matter_Asset__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Asset description</description>
    <inlineHelpText>Asset description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>