unpackaged/main/default/objects/Matter_Asset__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matter Assets</relationshipLabel>
    <relationshipName>Matter_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>