unpackaged/main/default/objects/Matter_Asset__c/fields/Employer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact__c</fullName>
    <label>Employer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>