unpackaged/main/default/objects/Matter_Asset__c/fields/Employer_County__c.field-meta.xml
<CustomField>
    <fullName>Employer_County__c</fullName>
    <label>Employer County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>