unpackaged/main/default/objects/Matter_Asset__c/fields/Escrow_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Closing_Date__c</fullName>
    <label>Escrow Closing Date</label>
    <type>Date</type>
</CustomField>