unpackaged/main/default/objects/Matter_Asset__c/fields/Escrow_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Contact__c</fullName>
    <label>Escrow Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>