unpackaged/main/default/objects/Matter_Asset__c/fields/Garnishment_Served_On__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Served_On__c</fullName>
    <label>Garnishment Served On</label>
    <type>Date</type>
</CustomField>