unpackaged/main/default/objects/Matter_Asset__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Real Property owner</description>
    <inlineHelpText>Real Property owner</inlineHelpText>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>