unpackaged/main/default/objects/Matter_Asset__c/recordTypes/Real_Property.recordType-meta.xml
<RecordType>
    <fullName>Real_Property</fullName>
    <active>true</active>
    <label>Real Property</label>
</RecordType>