unpackaged/main/default/objects/Matter_Asset__c/recordTypes/Wage_Garnishment.recordType-meta.xml
<RecordType>
    <fullName>Wage_Garnishment</fullName>
    <active>true</active>
    <label>Wage Garnishment</label>
</RecordType>